--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div><a href=""><button id="sign_up">Sign Up</button></a></div>
        </div>
       </nav>
-
+<div class="wrapper">
       <header class="home">
             <div class="home_content" >
                 <p class="home_heading">Always Track & <br class="hide-on-mobile">
@@ -253,19 +253,20 @@
         </div>
         <div><img class="question_img"src="images/Question.png" alt=""></div>
       </div>
-
+</div>
       <div class="footer">
       <div class="footer_content">
         <div class="email_content">
             <img class="logowhite"src="images/LogoWhite.png" alt="">
             <p>Want to recieve our <br>
                 awesome stories?</p>
-                <input class="footer_email" type="text" placeholder="Enter your email" ><input class="footer_email_submit" type="submit" value="Subcribe">
+                <input class="footer_email" type="text" placeholder="Enter your email" >
+                <input class="footer_email_submit" type="submit" value="Subcribe">
         </div>
-
-        <div>
+<div class="list">
+        <div class="list_email">
             <ul>
-                <li style="font-weight:800">Email</li>
+                <li id="E1">Email</li>
                 <li>info@the18.design</li>
             </ul>
         </div>
@@ -287,6 +288,7 @@
                 <li>Outbound Messages</li>
             </ul>
         </div>
+    </div>
       </div>
       <div class="socials">
         <div><p>© The 18 Design, All rights reserved.</p></div>
